Bug 1695509: Don't inflate overflow areas with stale positions of pushed floats that we drained but weren't able to place. r=TYLin

Before this patch, there's an edge case where we may drain a pushed float (with
a stale position), and then discover that it won't fit in the current block (so
we push it and leave its position untouched), but we still inadvertently
include its rect in the current block's overflow areas.  This means we're
feeding stale/bogus position into the overflow areas, which can make them
unnecessarily huge.

This patch accounts for this by only considering overflow from floats that we
actually successfully placed, in ReflowPushedFloats.

(Also: this patch removes a stale bit of documentation about aLineLayout being
possibly-null in AddFloat.  In actuality, AddFloat has a fatal assertion that
mandates that this arg is non-null.)

Differential Revision: https://phabricator.services.mozilla.com/D117218